--- a/linkingFile.html
+++ b/linkingFile.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     
+    <button class="marks"></button>
 
-    <button class="dom"></button>
-    <script src="js_06.js"></script>
+    <!-- <script src="js_06.js"></script> -->
+    <script src="js_07.js"></script>
 
 
 </body>
