--- a/linkingFile.html
+++ b/linkingFile.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     
-    <button class="marks"></button>
+  
 
     <!-- <script src="js_06.js"></script> -->
-    <script src="js_07.js"></script>
+    <!-- <script src="js_07.js"></script> -->
+     <script src="js_08.js"></script>
 
 
 </body>
